# unremarkable

./: .envrc  .gitignore  Cargo.toml  README.md  deploy.sh  flake.nix
src/: config.rs  lib.rs  pdf.rs  render.rs  utils.rs
src/storage/: collection.rs  document.rs  error.rs  item.rs  mod.rs
src/sync/: mod.rs
unremarkable-notes/: Cargo.toml
unremarkable-notes/src/: api.rs  main.rs  notebooks.rs
