[package]
name = "unremarkable-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
snafu = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lines-are-rusty = { path = "./lines-are-rusty" } # git = "https://github.com/ax3l/lines-are-rusty" }
pdf-canvas = "0.7"
tempfile = "3.3"
lazy_static = "1.4"
