[package]
name = "unremarkable-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "3.2.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lines-are-rusty = { git = "https://github.com/ax3l/lines-are-rusty" } # path = "../lines-are-rusty";  }
pdf-canvas = "0.7"
tempfile = "3.3"
poem = { version = "1.3", features = ["server", "static-files", "anyhow"] }
poem-openapi = { version = "2.0", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"
